# spectro_tools

./: .gitignore  LICENSE.txt  build_backend.py  pyproject.toml  setup.py
scratch/: check_vibronic.ipynb  check_voigt.ipynb  vibronic.py
scripts/: gen_version.py
src/: requirements.txt
src/spectro/: __init__.py  cumulant.py  fit.py  io.py  lineshapes.py  npz_shape.py  plot_utils.py  utils.py
src/spectro/scripts/: spectra_fit.py
