[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spectro"
authors = [{name = "Samuel Palato", email = "7659022+spalato@users.noreply.github.com"}]
license = {file = "LICENSE.txt"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "scipy",
    "lmfit",
    "matplotlib",
    "typer[all]"
]

[project.scripts]
mycli = "spectro.scripts.spectra_fit:app"